--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_main">Restaurant List</string>
     <string name="title_activity_restaurant">RestaurantActivity</string>
     <string name="title_activity_inspection">Inspection</string>
+    <string name="txt_select_a_restaurant">Select a restaurant to see inspections:</string>
 </resources>
