--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="title_activity_restaurant">RestaurantActivity</string>
     <string name="title_activity_inspection">Inspection</string>
     <string name="txt_select_a_restaurant">Select a restaurant to see inspections:</string>
+    <string name="inspection_details">Inspection Details</string>
+    <string name="string_trackingid">TrackingID:</string>
+    <string name="string_restaurantName">Restaurant Name:</string>
+    <string name="string_inspectionDate">Inspection Date:</string>
+    <string name="string_inspectionType">Inspection Type:</string>
+    <string name="string_hazardRating">Hazard Rating:</string>
 </resources>
