1. Formatted layouts for MainActivity and RestaurantActivity.
2. Now populating in MainActivity

3. Added and modified toString() functions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,12 @@
     <string name="num_non_critical">Number of Non Critical Issues:</string>
     <string name="hazard_rating">Hazard Rating</string>
     <string name="violations">Violations</string>
+    <string name="name_resActivity">Name</string>
+    <string name="address">Address</string>
+    <string name="semicolon">:</string>
+    <string name="latitude">Latitude</string>
+    <string name="longitude_resActivity">Longitude</string>
+    <string name="latitude_fix">Lat:</string>
+    <string name="longitude_fix">Long:</string>
 
 </resources>
