Main page added icon and more stats

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
         Tracking no., Restaurant Name\n
         Critical + Non-Critical, Hazard Level, Most Recent Inspection date</string>
 
+    <string name="na">N/A</string>
 
 </resources>
