--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="latitude_fix">Lat:</string>
     <string name="longitude_fix">Long:</string>
     <string name="main_display_format">Display Format:\n
-        Tracking no., Restaurant Name\n
+        Restaurant Name\n
         Critical + Non-Critical, Hazard Level, Most Recent Inspection date</string>
     <string name="restaurant_display_format">Display Format:\n
         Critical, Non-Critical, Relative date, Type, Hazard level, icon</string>
