setup initial google maps on mainactivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
         Critical, Non-Critical, Relative date, Type, Hazard level, icon</string>
 
     <string name="na">N/A</string>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
