Fixed location access permission!
-Not working: self location symbol not showing on first launch
However, it shows on consecutive launches

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,8 @@
 
     <string name="na">N/A</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_location_permission">Grant location access</string>
+    <string name="text_location_permission">Requires location access</string>
+    <string name="ok">Grant</string>
 
 </resources>
