--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,24 @@
     <string name="ok">Grant</string>
     <string name="txt_downloadAsk">The local database is less than 20 hours old, compared to the online database. Would you still like to update and fetch the new database?\nThis may take a moment depending on your internet connection.</string>
 
+    <string name="search_hint">Enter your search here</string>
+    <string name="search">Cobalt Search</string>
+    <string name="clear_filter">Clear</string>
+    <string name="hazard_level">Show Hazard Level:</string>
+    <string name="critical_violation_count">Show Critical Violations Count</string>
+    <string name="apply">Apply</string>
+
+    <string-array name="hazard_level_array">
+        <item>All</item>
+        <item>Low</item>
+        <item>Moderate</item>
+        <item>High</item>
+    </string-array>
+    
+    <string-array name="comparator">
+        <item>All</item>
+        <item>Greater or Equal</item>
+        <item>Lesser or Equal</item>
+    </string-array>
+
 </resources>
