Broken Feature: Shared Preferences
Created new branch but it's now working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,8 @@
     <string name="critical_violation_count">Show Critical Violations Count</string>
     <string name="apply">Apply</string>
     <string name="dialog_text">Latest update already installed!</string>
+    <string name = "greeting_check_update">\n\n\n\nNothing to show!
+                    \n\nNo updates to favourite restaurants found.\n\n</string>
 
     <string-array name="hazard_level_array">
         <item>All</item>
@@ -50,11 +52,13 @@
         <item>Moderate</item>
         <item>High</item>
     </string-array>
-    
+
     <string-array name="comparator">
         <item>All</item>
         <item>Greater or Equal</item>
         <item>Lesser or Equal</item>
     </string-array>
+    <string name="title_activity_check_update">Check Update Activity</string>
+    <string name="newly_inspected_favourite_restaurants_click_the_check_once_done">Following are the newly inspected favourite restaurants: (Click the check once done)</string>
 
 </resources>
